--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "axios": "^0.18.0",
+    "@slack/web-api": "^5.0.1",
     "serverless-offline": "^4.9.4",
     "source-map-support": "^0.5.10"
   },
