--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "@slack/web-api": "^5.0.1",
+    "@types/aws-sdk": "^2.7.0",
+    "aws-sdk": "^2.444.0",
     "serverless-offline": "^4.9.4",
     "source-map-support": "^0.5.10"
   },
